--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,6 +9,7 @@ phases:
   build:
     commands:
       - echo "Zipping deployment package..."
+      - apt-get install zip -y
       - cd lib
       - zip -r9 ../deployment_package.zip .
       - cd ..
