--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,18 +4,20 @@ phases:
     runtime-versions:
       python: 3.10
     commands:
-      - echo "Installing dependencies..."
+      - echo "Instalamos dependencias en el docker..."
       - pip install -r requirements.txt -t lib
   build:
     commands:
-      - echo "Zipping deployment package..."
+      - echo "Instalamos por las dudas zip..."
       - apt-get install zip -y
       - cd lib
       - zip -r9 ../deployment_package.zip .
       - cd ..
-      - zip -g deployment_package.zip lambda_function.py
+      - zip -g deployment_package.zip lambda_function.py     
   post_build:
     commands:
-      - echo "Updating lambda Function..."
-      - aws lambda update-function-code --zip-file fileb://deployment_package.zip --function-name github-to-lambda-demo
-      - echo "DONE!!"
+      - echo "Vamos a copiar a un S3 por las dudas por el tamaño..."
+      - aws s3 cp deployment_package.zip s3://fromsnowtos3/connector/ --acl bucket-owner-full-control
+      - echo "Actualizamos la funcion lambda..."
+      - aws lambda update-function-code --function-name update-function-code --s3-bucket fromsnowtos3 --s3-key connector/deployment_package.zip
+      - echo "Hecho!!!"
