--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,20 @@ phases:
     runtime-versions:
       python: 3.10
     commands:
-      - echo "Instalamos dependencias en docker..."
+      - echo "Instalamos dependencias en el docker..."
+      - pip install -r requirements.txt -t lib
+  build:
+    commands:
+      - echo "Instalamos por las dudas zip..."
+      - cd lib
+      - apt-get install zip -y
+      - zip -r9 ../deployment_package.zip .
+      - cd ..
+      - zip -g deployment_package.zip lambda_function.py     
+  post_build:
+    commands:
+      - echo "Vamos a copiar a un S3 por las dudas por el tamaño..."
+      - aws s3 cp deployment_package.zip s3://fromsnowtos3/connector/ --acl bucket-owner-full-control
       - echo "Actualizamos la funcion lambda..."
       - aws lambda update-function-code --function-name github-to-lambda-demo --s3-bucket fromsnowtos3 --s3-key connector/deployment_package.zip
       - echo "Hecho!!!"
